# django_project

./: .env.sample  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogentry_slug.py  0003_alter_blogentry_views_count.py  0004_alter_blogentry_image.py
blog/templates/blog/: base.html  blogentry_confirm_delete.html  blogentry_detail.html  blogentry_form.html  blogentry_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_version.py  0004_alter_version_is_active.py  0005_product_author.py  0006_alter_product_options_product_is_published.py  0007_alter_product_options_alter_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: base_menu.html  footer.html
catalog/templatetags/: mymedia.py
config/: settings.py  urls.py
data/: category_data.json  product_data.json
fixtures/: auth_data.json  blog_data.json  catalog_data.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py
users/templates/users/: login.html  user_form.html  user_register_form.html
