[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
