[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.22.2"
pytils = "^0.4.1"
django = "^4.2"
django-phonenumber-field = "^7.3.0"
django-phonenumbers = "^1.0.1"
redis = "^5.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
